Fixed layout shift when toggled

--- a/frontend/src/components/Links/ColorInput/ColorInput.module.scss
+++ b/frontend/src/components/Links/ColorInput/ColorInput.module.scss
@@ -88,7 +88,7 @@ $box-shadow-color: rgba(16, 24, 40, 0.05);
     font-size: var(--font-size-sm);
     font-weight: 400;
     line-height: 1.45;
-    margin-top: 0px;
+    margin-top: 2px;
     color: var(--error-color);
   }
 }
