--- a/frontend/src/scenes/tours/TourPageComponents/TourLeftContent/TourLeftContent.module.scss
+++ b/frontend/src/scenes/tours/TourPageComponents/TourLeftContent/TourLeftContent.module.scss
@@ -18,7 +18,8 @@
     display: flex;
     flex-direction: column;
     gap: 0.8rem;
-    height: 250px;
+    min-height: 200px;
+    max-height: 250px;
     overflow-y: scroll;
     overflow-x: hidden;
     min-width: 280px;
